# PythonCode

./: .gitignore  README.md  datetime.md  game.py  microphone.py  test.py  verification_code.py  what_did_you_learn.md
100_exercises/question01/: question1_sol.py
100_exercises/question03/: sol.py
100_exercises/question07/: sol.py  std_sol.py
100_exercises/question08/: sol.py
100_exercises/question09/: std_sol.py
100_exercises/question1/: question1.py  question1_sol.py
100_exercises/question10/: sol.py
100_exercises/question100/: sol.py
Lession01_rename_the_extension/: batch_file_rename.py  change_ext.py
Lession02_create_file/: create_file.py
Lession04_image/: add_text.py
Lession05_shellGUI/: shell_GUI.py
Lession07_indent_first_line/: output.txt
Lession08_ros2/ros2_ws/src/my_interfaces/: CMakeLists.txt  package.xml
Lession09_fileinfo/: data.txt
Lession10_filesize/: example.py
Lession11_zipfile/: unzip.py  zip.py  zip_unzip_def.py
Lession12_re/: re_exercises.py
Lession3_youtube/: set_max_velocity.py  test.py  youtubedownloader.py
Lession4_image/: add_num.py
Lession5_shellGUI/: show_files.sh
Lession6_CardsGame/: LittleCardsGame.py
Lession7_indent_first_line/: example.py  indent_first_line_v1.py  input.txt
Lession8_ros2/: README.md  subscription_example.py  two_in_one.py
Lession8_ros2/ros2_ws/src/my_nodes/: package.xml
Lession8_ros2/ros2_ws/src/my_nodes/my_nodes/: client_node.py
Lession9_fileinfo/: example.py  file_info.py  test.py
file_operate/: file.txt  test.py
note/: HMAC-SHA256.md  HTTP_time.md  decorator.md  encode_decode.md  get_file_path.md  random.md  signal.md  singleton_pattern.md  what_did_you_learn.md
one_minute_math/: one_minute_math.py  test.py
(+58 files in other folders)
