<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_nodes</name>
  <version>0.0.0</version>
  <description>A custom service node and a client node</description>
  <maintainer email="wuliyanglyon@163.com">lyon</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>my_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- add -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
